static/custom.css
/*
 * Alerts
 */

 .alert {
    border-radius: 0px;
  }
  
  nav{
    padding: 0;
  }
  /*
   * Cover page
   */
  
  .content {
    padding-top: 10px;
    color: white;
  }
  
  #cover-image {
    background: url('images/musical-background.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
  }
  
  .h-100 {
    min-height: 100vh;
    height: 100vh;
  }
  
  .vcenter-item{
      display: flex;
      align-items: center;
  }
  
  /*
   * Cover page
   */
  h1.cover-heading {
    font-size: 4rem;
  }
  
  p.cover-text {
    font-size: 1.7rem;
  }
  
  .cover-card {
    background-color: rgba(245, 245, 245, 0.6);
    max-width: 30rem;
    padding-top: 30px;
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 30px;
    border-radius: 15%;
  }
  .cover-card-block {
    opacity: 1
  }

  
  

  

